--- a/soft/src/isa/Makefile
+++ b/soft/src/isa/Makefile
@@ -16,6 +16,7 @@ RISCV_INCL ?= -I $(src_dir)/../env -I $(src_dir)/../common -I $(src_dir)/macros/
 RISCV_LINK_OPTS ?= -T $(src_dir)/../env/link.ld
 RISCV_OBJDUMP ?= $(RISCV)/riscv64-unknown-elf-objdump -Mnumeric,no-aliases --disassemble-all --disassemble-zeroes
 RISCV_OBJCOPY ?= $(RISCV)/riscv64-unknown-elf-objcopy -O binary
+RISCV_NM ?= $(RISCV)/riscv64-unknown-elf-nm -A
 
 vpath %.S $(src_dir)
 
@@ -23,6 +24,7 @@ define compile_template
 
 $$($(1)_tests): $(1)-%: $(1)/%.S
 	$$(RISCV_GCC) $$(RISCV_GCC_OPTS) $$(RISCV_INCL) $$(RISCV_LINK_OPTS) $$< -o $(3)/$$@.elf
+	$$(RISCV_NM) $(3)/$$@.elf | grep -sw 'tohost' | sed -e 's/.*:\(.*\) D.*/\1/' > $(3)/$$@.host
 	$$(RISCV_OBJDUMP) $(3)/$$@.elf > $(3)/$$@.dump
 	$$(RISCV_OBJCOPY) $(3)/$$@.elf $(3)/$$@.bin
 tests += $$($(1)_tests)
