generating tohost address for other testing programs added.

--- a/soft/src/float/Makefile
+++ b/soft/src/float/Makefile
@@ -15,6 +15,7 @@ RISCV_INCL ?= -I$(src_dir)/env -I$(src_dir)/float -I$(src_dir)/common
 
 float.elf: $(objs)
 	$(RISCV_GCC) $(RISCV_INCL) $(RISCV_GCC_OPTS) $^ -o $(bld_dir)/$@ $(RISCV_LINK_OPTS)
+	cp $(BASEDIR)/soft/src/float/float.host $(bld_dir)
 	mv $^ $(bld_dir)
 
 %.o: %.c
