--- a/soft/src/timer/Makefile
+++ b/soft/src/timer/Makefile
@@ -15,6 +15,7 @@ RISCV_INCL ?= -I$(src_dir)/env -I$(src_dir)/timer -I$(src_dir)/common
 
 timer.elf: $(objs)
 	$(RISCV_GCC) $(RISCV_INCL) $(RISCV_GCC_OPTS) $^ -o $(bld_dir)/$@ $(RISCV_LINK_OPTS)
+	cp $(BASEDIR)/soft/src/timer/timer.host $(bld_dir)
 	mv $^ $(bld_dir)
 
 %.o: %.c
