--- a/soft/src/compliance/Makefile
+++ b/soft/src/compliance/Makefile
@@ -21,7 +21,7 @@ vpath %.S $(src_dir)
 
 define compile_template
 
-$$($(1)_tests): $(1)-%: $(1)/src/%.S
+$$($(1)_tests): $(1)-%: $(1)/%.S
 	$$(RISCV_GCC) $$(RISCV_GCC_OPTS) $(4) $$(RISCV_INCL) $$(RISCV_LINK_OPTS) $$< -o $(3)/$$@.elf
 	$$(RISCV_NM) $(3)/$$@.elf | grep -sw 'tohost' | sed -e 's/.*:\(.*\) D.*/\1/' > $(3)/$$@.host
 	$$(RISCV_OBJDUMP) $(3)/$$@.elf > $(3)/$$@.dump
